apps/doc-analyzer/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: doc-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: ghcr.io/idanycb/findoc-rag-frontend:v1.1.3  # {"$imagepolicy": "doc-analyzer:frontend-policy"}
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 3000
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 384Mi
      restartPolicy: Always
